Fix compile errors and test failures